# vstpipe

./: .gitignore  README.md  client.py  debug.py  pipe.py  server.py
obs-pipe/: CMakeLists.txt  obs-pipe.c  obs-pipe.cpp  socket_source.c  socket_source.cpp
source/: pipe.cpp  pipe.h  vstpipe.cpp  vstpipe.h
win/: vstpipe.vcxproj  vstpipe.vcxproj.filters
